login and part of register

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "vue": "^2.1.6",
+    "vue-resource": "^1.0.3",
     "vue-router": "^2.1.1",
     "vuex": "^2.1.1"
   },
@@ -20,6 +21,7 @@
     "autoprefixer-loader": "^3.2.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
+    "babel-plugin-lodash": "^3.2.11",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-runtime": "^6.20.0",
@@ -31,6 +33,8 @@
     "html-webpack-plugin": "^2.24.1",
     "imports-loader": "^0.7.0",
     "jquery": "^3.1.1",
+    "lodash": "^4.17.2",
+    "lodash-webpack-plugin": "^0.10.6",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "vue-hot-reload-api": "^2.0.6",
