--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^2.24.1",
     "imports-loader": "^0.7.0",
     "jquery": "^3.1.1",
+    "js-cookie": "^2.1.3",
     "lodash": "^4.17.2",
     "lodash-webpack-plugin": "^0.10.6",
     "style-loader": "^0.13.1",
