--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-lodash": "^3.2.11",
+    "babel-plugin-transform-object-assign": "^6.8.0",
+    "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-plugin-transform-vue-jsx": "^3.3.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-runtime": "^6.20.0",
     "bootstrap": "^3.3.7",
