--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,10 @@
 {
-    "presets": [
-        "es2015"
-    ],
-    "plugins": [
-        "transform-object-assign",
-        "transform-vue-jsx",
-        "transform-object-rest-spread"
-    ]
-} 
+    "presets": ["es2015", "stage-2"],
+    "plugins": ["transform-runtime"],
+    "comments": false,
+    "env": {
+        "test": {
+            "plugins": [ "istanbul" ]
+        }
+    }
+}
