--- a/package.json
+++ b/package.json
@@ -16,22 +16,21 @@
   },
   "devDependencies": {
     "alertifyjs": "^1.8.0",
-    "babel-plugin-transform-object-rest-spread": "^6.20.2",
-    "bootstrap": "^3.3.7",
-    "bootstrap-table": "^1.11.0",
-    "jquery": "^3.1.1",
-    "js-cookie": "^2.1.3",
-    "lodash": "^4.17.2",
-    "webpack-dev-server": "^2.1.0-beta.12",
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-istanbul": "^3.0.0",
+    "babel-plugin-transform-object-rest-spread": "^6.20.2",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.0.0",
     "babel-register": "^6.0.0",
+    "bootstrap": "^3.3.7",
+    "bootstrap-table": "^1.11.0",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "connect-history-api-fallback": "^1.1.0",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
@@ -41,8 +40,10 @@
     "function-bind": "^1.0.2",
     "html-webpack-plugin": "^2.8.1",
     "http-proxy-middleware": "^0.17.2",
+    "inject-loader": "^2.0.1",
+    "jquery": "^3.1.1",
+    "js-cookie": "^2.1.3",
     "json-loader": "^0.5.4",
-    "cross-env": "^3.1.3",
     "karma": "^1.3.0",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.2.0",
@@ -51,24 +52,23 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "karma-webpack": "^1.7.0",
+    "lodash": "^4.17.2",
     "lolex": "^1.4.0",
     "mocha": "^3.1.0",
-    "chai": "^3.5.0",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
-    "inject-loader": "^2.0.1",
-    "babel-plugin-istanbul": "^3.0.0",
-    "phantomjs-prebuilt": "^2.1.3",
-    "semver": "^5.3.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
+    "phantomjs-prebuilt": "^2.1.3",
+    "semver": "^5.3.0",
     "shelljs": "^0.7.4",
+    "sinon": "^1.17.3",
+    "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^1.13.2",
     "webpack-dev-middleware": "^1.8.3",
+    "webpack-dev-server": "^1.16.1",
     "webpack-hot-middleware": "^2.12.2",
     "webpack-merge": "^0.14.1"
   },
