--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
-    "presets": ["es2015", "stage-2"],
-    "plugins": ["transform-runtime"],
+    "presets": ["es2015", "stage-0"],
+    "plugins": ["transform-runtime","transform-object-assign"],
     "comments": false,
     "env": {
         "test": {
