--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "private": true,
   "scripts": {
     "dev": "node build/dev-server.js",
-    "build": "node build/build.js",
-    "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
-    "test": "npm run unit"
+    "build": "node build/build.js"
   },
   "dependencies": {
     "vue": "^2.1.6",
@@ -44,24 +42,11 @@
     "jquery": "^3.1.1",
     "js-cookie": "^2.1.3",
     "json-loader": "^0.5.4",
-    "karma": "^1.3.0",
-    "karma-coverage": "^1.1.1",
-    "karma-mocha": "^1.2.0",
-    "karma-phantomjs-launcher": "^1.0.0",
-    "karma-sinon-chai": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
-    "karma-webpack": "^1.7.0",
     "lodash": "^4.17.2",
-    "lolex": "^1.4.0",
-    "mocha": "^3.1.0",
     "opn": "^4.0.2",
     "ora": "^0.3.0",
-    "phantomjs-prebuilt": "^2.1.3",
     "semver": "^5.3.0",
     "shelljs": "^0.7.4",
-    "sinon": "^1.17.3",
-    "sinon-chai": "^2.8.0",
     "url-loader": "^0.5.7",
     "vue-loader": "^10.0.0",
     "vue-style-loader": "^1.0.0",
