--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "vue": "^2.1.6",
     "vue-router": "^2.1.1",
+    "vuelidate": "^0.2.0",
     "vuex": "^2.1.1"
   },
   "devDependencies": {
