--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
     "babel-plugin-istanbul": "^3.0.0",
+    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.0.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
-    "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-register": "^6.0.0",
     "bootstrap": "^3.3.7",
     "bootstrap-table": "^1.11.0",
@@ -31,6 +31,7 @@
     "connect-history-api-fallback": "^1.1.0",
     "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
+    "date-fns": "^1.27.1",
     "eventsource-polyfill": "^0.9.6",
     "express": "^4.13.3",
     "extract-text-webpack-plugin": "^1.0.1",
